update MovieAnalysis notebook, add images

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -12474,7 +12474,6 @@
    "source": [
     "#not super clear, gonna drop em\n",
     "df.drop(df.loc[df['worldwide_gross'].isna() & (~df['domestic_gross'].isnull() & df['foreign_gross'].isnull())].index, inplace=True)\n",
-    "#stack says this is how to do this, should check if there is a cleaner way\n",
     "df"
    ]
   },
@@ -22987,8 +22986,8 @@
    ],
    "source": [
     "month_avgs = df_month[['roi', 'release_month']].groupby('release_month').mean()\n",
-    "month_avgs.rename(index={'1': 'Jan', '2': 'Feb', '3': 'Mar', '4': 'Apr', '5': 'May',\n",
-    "                         '6': 'Jun', '7': 'Jul', '8': 'Aug', '9': 'Sep', '10': 'Oct', '11': 'Nov', '12': 'Dec'}, inplace=True)\n",
+    "map_month = {'1': 'Jan', '2': 'Feb', '3': 'Mar', '4': 'Apr', '5': 'May',\n",
+    "                         '6': 'Jun', '7': 'Jul', '8': 'Aug', '9': 'Sep', '10': 'Oct', '11': 'Nov', '12': 'Dec'}\n",
     "month_avgs"
    ]
   },
@@ -23026,22 +23025,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "2020"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df_dropOutliers' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-c2fd45322aef>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf_dropOutliers\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'df_dropOutliers' is not defined"
+     ]
     }
    ],
    "source": [
-    "df_dropOutliers['start_year'].max()"
+    "df_dropOutliers"
    ]
   },
   {
